@@ -4,8 +4,9 @@
 NVCC=@NVCC_BIN@
 CUDA_DIR=@CUDA_DIR@
 CUDA_INC=@CUDA_INC_DIR@
-PKG_CPPFLAGS=-I$(CUDA_INC) -DUSE_S4_ENUMS=1 -DLOCAL_CREATE_REF=1 -DR_REF_NO_CLASS_MATCH_ERROR=1
+PKG_CPPFLAGS=-g -I$(CUDA_INC) -DUSE_S4_ENUMS=1 -DLOCAL_CREATE_REF=1 -DR_REF_NO_CLASS_MATCH_ERROR=1
 PKG_LIBS=-L@CUDA_LIB_DIR@ -lcuda -lcudart
+CC=/usr/bin/gcc
 
 %.o: %.cu
 	$(NVCC) -c $< -I$(CUDA_INC) -I$(R_HOME)/include
